tests/errors/ishftc_size.f90
program ishftc_size
    print *, ishftc(10, 6, 4)
end program 